Login fertig und Funktionalitaet auch

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
         android:id="@+id/tvAttemptsInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login Versuche übrig: 5"
+        android:text="Login Versuche verbleibend: 5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
